fixes whitespace issues in fcav.css

--- a/fcav.css
+++ b/fcav.css
@@ -4,176 +4,139 @@ body {
 }
 
 body, td, th {
-	font-family:Arial, Helvetica, sans-serif;
-	color:#222;
-	font-size:11pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #222;
+    font-size: 11pt;
 }
 
-a{
+a {
     color: #000000;
     text-decoration: none;
 }
 
-
 #titleBar {
-    z-index:5;
-    background:#665f45;
-	padding:5px;
+    z-index: 5;
+    background: #665f45;
+    padding: 5px;
     display: block;
     position: relative;
-	font-family:Verdana, Geneva, sans-serif;
-	box-shadow:0px 2px 3px #333;
-}      
+    font-family: Verdana, Geneva, sans-serif;
+    box-shadow: 0px 2px 3px #333;
+}
 
 #titlebar h2 {
-	color:#e6e4d8;
-	font-weight:bold;
-	font-style:italic;
-	letter-spacing:-1px;
-	margin: 0 auto 0 auto;
-	font-size:1.25em;
+    color: #e6e4d8;
+    font-weight: bold;
+    font-style: italic;
+    letter-spacing: -1px;
+    margin: 0 auto 0 auto;
+    font-size: 1.25em;
 }
-
 
 #leftmenuitems, #selectmenuitems, #maptoolmenuitems, #rightmenuitems {
-	width:25%;
-	position:relative;
-	display:inline-block;
-	height:30px;
+    width: 25%;
+    position: relative;
+    display: inline-block;
+    height: 30px;
 }
-  
+
 #btntgllyrpick, #btnhelp {
-	float:left;
+    float: left;
 }
 
 #btntgllegend {
-	float:right;
+    float: right;
 }
-  
-  
+
 #btntgllyrpick, #btnhelp, #btntgllegend {
-	position:relative;
-	margin: 0 3px 3px 3px;
+    position: relative;
+    margin: 0 3px 3px 3px;
 }
 
 #mapbase b, #maptheme b {
-	margin-right:3px;
-} 
-  
-#header {
-    z-index:10002;
-    background:#dfddd0;
-    display: block;
-	height:35px;
-	padding-left:3px;
-	box-shadow:3px 1px 5px #333;
-	text-align:center;
+    margin-right: 3px;
 }
 
+#header {
+    z-index: 10002;
+    background: #dfddd0;
+    display: block;
+    height: 35px;
+    padding-left: 3px;
+    box-shadow: 3px 1px 5px #333;
+    text-align: center;
+}
 
 #mapToolsDialog {
-   position: relative;
-   z-index: 10003;
-   padding: 0px;
+    position: relative;
+    z-index: 10003;
+    padding: 0px;
 }
 
 #mapToolsAccordion {
-    width:100%;
-    height:100%;
-    background:#FFFFFF;
-    font-size:.80em; 
-	/*
-    float:right;
-    width:auto;
-    z-index:10001;
-	box-shadow:0px 0px 10px #333;
-	overflow-y:auto;
-	overflow-x:hidden;
-*/
-} 
-#mapToolsAccordion .baseLbl {
-    background:#cdcdcd;
-    font-size:1.3em;
-    font-weight:bold;
+    width: 100%;
+    height: 100%;
+    background: #FFFFFF;
+    font-size: .80em;
 }
+
+#mapToolsAccordion .baseLbl {
+    background: #cdcdcd;
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
 #mapToolsAccordion .baseLayersDiv .labelSpan {
-    font-style:italic;
-    font-weight:bold;
-}    
-
-
+    font-style: italic;
+    font-weight: bold;
+}
 
 #layerPickerDialog {
-  position: relative;
-  z-index: 10004;
-  padding: 0px;
+    position: relative;
+    z-index: 10004;
+    padding: 0px;
 }
 
 #layerPickerAccordion {
-    width:100%;
-    height:100%;
-    background:#FFFFFF;
-    font-size:.80em; 
-/*
-    float:left;
-    background:#FFFFFF;
-    width:auto;
-    z-index:10000;
-    position:absolute;
-    font-size:.80em;
-	box-shadow:1px 1px 10px #333;
-	overflow-y:auto;
-	overflow-x:hidden;
-*/
+    width: 100%;
+    height: 100%;
+    background: #FFFFFF;
+    font-size: .80em;
 }
+
 #layerPickerAccordion .baseLbl {
-    background:#cdcdcd;
-    font-size:1.3em;
-    font-weight:bold;
+    background: #cdcdcd;
+    font-size: 1.3em;
+    font-weight: bold;
 }
+
 #layerPickerAccordion .baseLayersDiv .labelSpan {
-    font-style:italic;
-    font-weight:bold;
-}	
+    font-style: italic;
+    font-weight: bold;
+}
+
 .olControlAttribution {
     bottom: 5px;
     font-size: 9px;
 }
+
 #map {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-/*
-  background: #ff0000;
-  border: 10px solid green;
-*/
-/*
-   border: 1px solid black;
-   position: absolute;
-   bottom: 0px;
-   top: 0px;
-   left: 0px;
-   right: 0px;
-*/
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
-
 
 #identify_results td.layer-results {
-   width: 200px;
-}
-#identify_results td.layer-label {
-   font-weight: bold;
-   text-align: right;
+    width: 200px;
 }
 
+#identify_results td.layer-label {
+    font-weight: bold;
+    text-align: right;
+}
 
 .layerPropertiesIcon {
-   margin-left: 5px;
-}
-
-.layer-properties-dialog {
-/*   width:auto; */
+    margin-left: 5px;
 }
 
 .layer-properties-dialog table td{
@@ -181,21 +144,21 @@ a{
 }
 
 .splashScreenStyle {
-    opacity: 0.9 !important;; 
+    opacity: 0.9 !important;
 }
 
 .layer-properties-dialog td {
-  white-space: nowrap;
+    white-space: nowrap;
 }
 
 .layer-properties-dialog .transparency-text {
-   border-color:transparent;
+    border-color:transparent;
 }
 
 .layer-properties-dialog .transparency-slider {
-   width: 120px;
-   margin-left: 8px;
-   margin-right: 5px;
+    width: 120px;
+    margin-left: 8px;
+    margin-right: 5px;
 }
 
 #fcavMultigraphMessage {
@@ -216,17 +179,17 @@ textarea.shareMapUrl {
 }
 
 .ui-accordion .ui-accordion-content {
-  padding-left: 10px;
-  padding-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .nonselectable {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .olControlScaleBar {
@@ -294,38 +257,37 @@ textarea.shareMapUrl {
 }
 
 #footer {
-    z-index:10003;
-    background:#dfddd0;
+    z-index: 10003;
+    background: #dfddd0;
     display: block;
-	height:30px;
-	padding-left:3px;
-	box-shadow:3px 1px 5px #333;
-	text-align:center;
-}
-#links
-{
-    float: left;
-}
-#latLonTracker
-{
-    float: right;
-	overflow:hidden;
-    margin-top: 0;
-    margin-bottom: 0;	
+    height: 30px;
+    padding-left: 3px;
+    box-shadow: 3px 1px 5px #333;
+    text-align: center;
 }
 
-.ui-autocomplete
- {
-	position:absolute;
-	cursor:default;
-	z-index:4000 !important
+#links {
+    float: left;
+}
+
+#latLonTracker {
+    float: right;
+    overflow: hidden;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.ui-autocomplete {
+    position: absolute;
+    cursor: default;
+    z-index: 4000 !important;
 }
 
 #identify_results {
-	border-collapse: collapse; 
+    border-collapse: collapse; 
 }
 
 #identify_results td {
-	border-collapse: collapse; 
-	border: .05em solid #C0C0C0; 
+    border-collapse: collapse; 
+    border: .05em solid #C0C0C0;
 }
